# Kinesis

./: README.md  index.html  package-lock.json  package.json  tauri-branding.cjs  vite.config.ts
scripts/: set-tauri.cjs
src/: App.tsx  api.ts  branding.ts  index.css  main.tsx
src-tauri/: Cargo.toml  build_output.txt  tauri.conf.json  test.rs
src-tauri/capabilities/: default.json
src-tauri/icons-genesis/: icon.icns
src-tauri/icons-kinesis/: icon.icns
src-tauri/src/: db.rs  history.rs  lib.rs  ollama.rs  types.rs  venice.rs  youtube.rs
src-tauri/src/commands/: ai.rs  history.rs  mod.rs  settings.rs  youtube.rs
src/components/: ConfirmDialog.tsx  KeySetup.tsx  Notification.tsx  SearchBar.tsx  SettingsModal.tsx  Sidebar.tsx  VideoList.tsx
src/components/settings/: ApiKeyTab.tsx  DatabaseTab.tsx  DisplayTab.tsx  HistoryTab.tsx  PluginsTab.tsx
src/hooks/: useLibrary.ts  useSearch.ts
src/lib/: utils.ts
