[package]
name = "kinesis"
version = "0.1.3"
description = "A desktop application for saving and organizing YouTube video transcripts."
authors = ["William N. Johnson"]
license = "MIT"
repository = "https://github.com/willnjohnson/Kinesis"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "blocking", "gzip", "deflate", "brotli", "cookies"] }
regex = "1.10"
quick-xml = "0.36"
scraper = "0.20"
urlencoding = "2.1.3"
tauri-plugin-openurl = "0.1.0-beta.3"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.3.5"
rusqlite = { version = "0.32", features = ["bundled"] }
futures = "0.3"
tokio = { version = "1.49.0", features = ["time"] }
